1 last issue - spacing ofpic for bridal showers

--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ body {
 /* testimonials */
 
 .revsec {
-    width: 60%;
+    width: 70%;
     margin: 0% auto;
 }
 
